--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+theme: jekyll-theme-minimal
+
+
 Tracer kinetic modeling is a fundamental technique in dynamic positron emission tomography (PET) that uses mathematical models to extract physiologically significant parameters from the measured data. A blood input function is commonly required to serve as the input to the kinetic model and then used to fit the time activity curve (TAC) of a tissue region of interest or image voxel. However, obtaining a reliable input function is challenging in several contexts and has attracted many efforts in this area.
 
 OpenIFun is an open-data project aiming to build a database of blood input functions for tracer kinetic modeling in dynamic PET data. The first effort focuses on using total-body PET scanners to collect image-derived input functions (IDIF) from major blood pools from dynamic PET scans of human subjects.
