--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,9 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+# Site settings
+title: Great New Blog Title
+author:
+  name: Evan Will
+  email: your-email@domain.com
+description: "Great site about Jekyll on GH-Pages."
 
-Tracer kinetic modeling is a fundamental technique in dynamic positron emission tomography (PET) that uses mathematical models to extract physiologically significant parameters from the measured data. A blood input function is commonly required to serve as the input to the kinetic model and then used to fit the time activity curve (TAC) of a tissue region of interest or image voxel. However, obtaining a reliable input function is challenging in several contexts and has attracted many efforts in this area.
-
-OpenIFun is an open-data project aiming to build a database of blood input functions for tracer kinetic modeling in dynamic PET data. The first effort focuses on using total-body PET scanners to collect image-derived input functions (IDIF) from major blood pools from dynamic PET scans of human subjects.
-
-This database has several crucial applications. Examples include, but are not limited to:
-
-It can be used to develop population-based input function models, for instance, for whole-body Patlak parametric imaging of shortened dynamic scans that do not include an early dynamic scan for deriving the complete blood input function.
-It can be used to develop deep-learning models and algorithms by providing training pairs of high-quality and low-quality IDIFs and associated other types of data.
+# Build settings
+remote_theme: jekyll/minima
